apps/ollama/base/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    cert-manager.io/cluster-issuer: iaas-wcooke-me
    # forecastle.stakater.com/appName: Ollama
    # forecastle.stakater.com/expose: "true"
    # forecastle.stakater.com/group: Kubernetes
    # forecastle.stakater.com/icon: https://ollama.apps.iaas.wcooke.me/favicon.ico
    # forecastle.stakater.com/network-restricted: "false"
  name: ollama
spec:
  ingressClassName: cilium
  rules:
  - host: ollama.apps.iaas.wcooke.me
    http:
      paths:
      - backend:
          service:
            name: ollama
            port:
              number: 11434
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ollama.apps.iaas.wcooke.me
    secretName: ollama-ingress
